--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div>&nbsp;</div>
         <div class="apps">
-          <p>Ayo belajar dan buat aplikasi mobilenya!<br/>Sementara tidak akan ditemukan pada:</p>
+          <p>Nanti ada aplikasi mobilenya!<br/>Sementara tidak akan ditemukan pada:</p>
           <div class="icon">
             <a href="#"><img src="img/appstore.png" alt="appstore"></a>
             <a href="#"><img src="img/googleplay.png" alt="googleplay"></a>
