--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <div class="apps">
           <p>Nanti ada aplikasi mobilenya!<br/>Sementara tidak akan ditemukan pada:</p>
           <div class="icon">
-            <a href="#"><img src="img/appstore.png" alt="appstore"></a>
-            <a href="#"><img src="img/googleplay.png" alt="googleplay"></a>
+            <a href="https://www.apple.com/app-store/"><img src="img/appstore.png" alt="appstore"></a>
+            <a href="https://play.google.com/"><img src="img/googleplay.png" alt="googleplay"></a>
           </div>
         </div>
       </div>
